# monadic_operations_cpp23-main

./: LICENSE  README.md
sources/: CMakeLists.txt  README.md
sources/01x_classicerrorhandlingExceptions/: CMakeLists.txt  classicerrorhandling_exceptions.cpp  classicerrorhandling_exceptions.h  main.cpp
sources/02_functor/: CMakeLists.txt  functor.h  main.cpp  testfunctor.cpp  testfunctor.h
sources/04_callables/: CMakeLists.txt  main.cpp  testcallables.cpp  testcallables.h
sources/06a_classicloop/: CMakeLists.txt  classicloop.cpp  classicloop.h  main.cpp
sources/06b_rangemonad/: CMakeLists.txt  main.cpp  rangemonad.cpp  rangemonad.h
sources/07_purefunctions/: CMakeLists.txt  main.cpp  purefunctions.cpp  purefunctions.h
sources/08a_classicerrorhandling/: CMakeLists.txt  classicerrorhandling.cpp  classicerrorhandling.h  legacyupgrade.h  main.cpp
sources/08b_optionalmonad/: CMakeLists.txt  main.cpp  optionalmonad.cpp  optionalmonad.h  optionalmonadtest.cpp  optionalmonadtest.h
sources/09_expectedmonad/: CMakeLists.txt  expectedmonad.cpp  expectedmonad.h  main.cpp
sources/10_defaultmonad/: CMakeLists.txt  defaultmonad.cpp  defaultmonad.h  main.cpp
sources/12a_pointerclassic/: CMakeLists.txt  main.cpp  pointerclassic.cpp  pointerclassic.h
sources/12b_pointermonad/: CMakeLists.txt  main.cpp  pointermonad.cpp  pointermonad.h
sources/13a_continuationmonad/: CMakeLists.txt  main.cpp  testcontinuation.cpp  testcontinuation.h
sources/13b_writermonad/: CMakeLists.txt  main.cpp  testwriter.cpp  testwriter.h  writermonad.cpp  writermonad.h
sources/13c_continuationandwriter/: CMakeLists.txt  main.cpp  testcontinuationwriter.cpp  testcontinuationwriter.h
sources/common/: compilerinfo.h  diagnosticinfo.cpp  diagnosticinfo.h  elapsed.cpp  elapsed.h  elementdata.cpp  elementdata.h  globals.h  noisy.cpp  noisy.h  pointerscommon.cpp  printutils.h  sharedfunctions.cpp  sharedfunctions.h  sleepy.cpp  sleepy.h  stacktraceutils.cpp  stacktraceutils.h  utils.cpp  utils.h
sources/x1a_traceclassic/: CMakeLists.txt  main.cpp
sources/x1b_tracervo/: CMakeLists.txt  main.cpp
sources/x2_perfectforward/: CMakeLists.txt  main.cpp
