cmake_minimum_required(VERSION 3.14)
project(2024_monadicOperations LANGUAGES CXX)

find_package(Qt6 COMPONENTS Core Concurrent)
IF (${Qt6_FOUND})
   MESSAGE(STATUS "Found Qt6")
ELSE (${Qt6_FOUND})
   MESSAGE(STATUS "Did not find Qt6 - Continuation Monad example will be missing.")
ENDIF (${Qt6_FOUND})

# Main projects, ordered the same way as the presentation
add_subdirectory(01x_classicerrorhandlingExceptions/)
add_subdirectory(02_functor/)
add_subdirectory(04_callables)
add_subdirectory(06a_classicloop/)
add_subdirectory(06b_rangemonad/)
add_subdirectory(07_purefunctions/)
add_subdirectory(08a_classicerrorhandling/)
add_subdirectory(08b_optionalmonad/)
add_subdirectory(09_expectedmonad/)
add_subdirectory(10_defaultmonad/)
add_subdirectory(12a_pointerclassic/)
add_subdirectory(12b_pointermonad/)
IF (${Qt6_FOUND})
   add_subdirectory(13a_continuationmonad/)
ENDIF (${Qt6_FOUND})
add_subdirectory(13b_writermonad/)
IF (${Qt6_FOUND})
   add_subdirectory(13c_continuationandwriter/)
ENDIF (${Qt6_FOUND})

# Further projects to demonstrate things related to the presentation (but not directly appearing in the slides)
add_subdirectory(x1a_traceclassic/)
add_subdirectory(x1b_tracervo/)
add_subdirectory(x2_perfectforward/)
